--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
 </head>
 
 <body>
-    <section class="section-navbar py-5">
+    <section class="section-navbar ">
         <h1>Navbar</h1>
     </section>
     <section class="section-hero py-5 container">
         <!-- <h1>Hero</h1> -->
-        <div class="row">
-            <div class="col-5 py-2">
-                <h1 class="text-uppercase font-weight-bold">Tech Enabled service Platform</h1>
+        <div class="row hero-background">
+            <div class="col-12 col-lg-5 py-5 my-3">
+                <h1 class="text-uppercase font-weight-bold nz-text-gold">Tech Enabled service Platform</h1>
                 <p class="text-uppercase font-weight-bold">FOR ALL YOUR PROFESSIONAL SERVICES</p>
-                <button class="btn btn-primary text-uppercase">Need Service</button>
-                <button class="btn btn-outline-primary text-uppercase">offer A Service</button>
+                <div class="d-flex justify-content-between">
+                    <button class="btn btn-block mr-4 my-0 py-3 nz-btn-gold text-uppercase">Need Service</button>
+                    <button class="btn btn-block m-0 py-3 btn-outline-gold text-uppercase">offer A Service</button>
+                </div> 
             </div>
         </div>
     </section>
@@ -34,7 +36,7 @@
         <h1 class="section-title-centerd">How It Works</h1>
         <h1 class="section-title-side">Our Services</h1>
         <div class="row">
-            <div class="col-sm-12 col-md-6 how-it-works-item d-flex ">
+            <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
                 <p class="hiw-number">1</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item1.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
@@ -42,7 +44,7 @@
                     <p class="hiw-text">Quick and Easy Steps, Get Started.</p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 how-it-works-item d-flex ">
+            <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
                 <p class="hiw-number">2</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item2.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
@@ -53,7 +55,7 @@
                         Upload Your Document.</p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 how-it-works-item d-flex ">
+            <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
                 <p class="hiw-number">3</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item3.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
@@ -62,7 +64,7 @@
                     <p class="hiw-text">service provider to meet your Requirements and Deadline.</p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 how-it-works-item d-flex ">
+            <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
                 <p class="hiw-number">4</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item4.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
@@ -70,7 +72,7 @@
                     <p class="hiw-text">Sit and Relax while NINJAZ manages the process and logistics for you</p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 offset-md-6 how-it-works-item d-flex ">
+            <div class="col-sm-12 col-md-6 offset-md-6 how-it-works-item d-flex">
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item5.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
                 </div>
