--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section class="section-navbar ">
         <!-- <h1>Navbar</h1> -->
-        <nav class="navbar navbar-expand-lg container py-5">
+        <nav class="navbar navbar-light navbar-expand-lg container py-5">
             <a class="navbar-brand" href="#">
                 <img src="/assets/images/logo.png" height="70" alt="">
             </a>
@@ -38,7 +38,8 @@
                         <a class="nav-link text-dark" href="#">login</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark nz-btn-gold py-0 my-2" href="#">Sign Up</a>
+                        <a class="nav-link text-dark " href="#"><span class="nz-btn-gold py-0 my-2 px-2">Sign
+                                Up</span></a>
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
@@ -68,7 +69,7 @@
         <div class="row hero-background">
             <div class="col-12 col-lg-5 py-5 mt-5">
                 <h1 class="text-uppercase font-weight-bold nz-text-gold">Tech Enabled service Platform</h1>
-                <p class="text-uppercase font-weight-normal lead">FOR ALL YOUR PROFESSIONAL SERVICES</p>
+                <p class="text-uppercase font-weight-normal">FOR ALL YOUR PROFESSIONAL SERVICES</p>
                 <div class="d-flex justify-content-between pt-4">
                     <button class="btn btn-block mr-4 my-0 py-3 nz-btn-gold text-uppercase font-weight-bold">Need
                         Service</button>
@@ -80,15 +81,14 @@
     </section>
     <section class="section-how-it-works py-5 container">
         <!-- <h1>How It Works</h1> -->
-        <h1 class="section-title-centerd">How It Works</h1>
-        <h1 class="section-title-side">Our Services</h1>
-        <div class="row">
+        <h1 class="section-title-centerd"><span>How It Works</span></h1>
+        <div class="row mt-5">
             <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
                 <p class="hiw-number">1</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item1.png" alt="Ninjaz - How It Works item"
-                        class="hiw-img">
+                        class="hiw-img mb-0">
                     <h2 class="text-uppercase font-weight-bold">Sign up!</h2>
-                    <p class="hiw-text">Quick and Easy Steps, Get Started.</p>
+                    <p class="hiw-text">Quick and Easy Steps, <span class="nz-pill-gold"> Get Started</span>.</p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
@@ -99,27 +99,33 @@
                     <p class="hiw-text">Select your professional service whether it is
                         translation,
                         attestation or any other service.
-                        Upload Your Document.</p>
+                        <!-- <br> -->
+                        <div>
+                            <span class="nz-pill-gold"> Upload Your Document</span>.
+                        </div>
+                    </p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
+            <div class="col-sm-12 col-md-6  how-it-works-item d-flex">
                 <p class="hiw-number">3</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item3.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
                     <h2 class="text-uppercase font-weight-bold">GET YOUR QUOTES </h2>
-                    <p class="hiw-text">NINJAZ finds you the Best Rated and Priced </p>
-                    <p class="hiw-text">service provider to meet your Requirements and Deadline.</p>
+                    <p class="hiw-text">NINJAZ finds you the Best Rated and Priced <br>service provider to meet your
+                        <span class="nz-pill-gold">Requirements and
+                            Deadline.</span></p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 how-it-works-item d-flex">
                 <p class="hiw-number">4</p>
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item4.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
-                    <h2 class="text-uppercase font-weight-bold">START YOUR PROJECT. </h2>
-                    <p class="hiw-text">Sit and Relax while NINJAZ manages the process and logistics for you</p>
+                    <h2 class="text-uppercase font-weight-bold" style="margin-top: 5rem;">START YOUR PROJECT. </h2>
+                    <p class="hiw-text">Sit and Relax while <span class="nz-pill-gold">NINJAZ</span> manages the process
+                        and logistics for you</p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 offset-md-6 how-it-works-item d-flex">
+            <div class="col-sm-12 col-md-6 offset-md-6 how-it-works-item d-flex pt-0">
                 <div class="hiw-item-content"><img src="/assets/images/hiw_item5.png" alt="Ninjaz - How It Works item"
                         class="hiw-img">
                 </div>
@@ -133,7 +139,7 @@
                 <p>Here are some glimpse of our
                     services. Want to find more then
                     look at below!</p>
-                <button class="btn btn-primary text-uppercase">Need Service</button>
+                <button class="btn btn-lg py-3 px-4 nz-btn-gold ">Check Service</button>
             </div>
             <div class="col-sm-12 col-lg-8">
                 <img src="assets/images/our_services.png" alt="Our Services" class="img-fluid">
@@ -148,6 +154,8 @@
                 <img src="assets/images/client_feedBack.png" alt="Our Services" class="img-fluid">
             </div>
             <div class="col-sm-12 col-lg-6">
+                    <h1 class="section-title-side">Client FeedBack</h1>
+
                 <div class="bd-example bg-primary">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
@@ -193,7 +201,8 @@
     </section>
     <section class="section-our-partiners py-5 container">
         <!-- <h1>Our Partiners</h1> -->
-        <h1 class="section-title-centerd">Our Partners</h1>
+
+        <h1 class="section-title-centerd"><span>Our Partners</span></h1>
 
         <div class="owl-carousel">
             <div> Your Content 1</div>
@@ -207,7 +216,7 @@
     </section>
     <section class="section-contact-us py-5 container">
         <!-- <h1>Contact Us</h1> -->
-        <h1 class="section-title-centerd">Contact Us</h1>
+        <h1 class="section-title-centerd"><span>Contact Us</span></h1>
         <div class="row">
             <div class="col-sm-12 col-md-5">
                 <p> Feel Free to</p>
