--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
     <section class="section-our-services py-5 container">
         <!-- <h1>Our Services</h1> -->
         <div class="row">
-            <div class="col-sm-12 col-lg-4">
-                <h1 class="section-title-side">Our Services</h1>
-                <p>Here are some glimpse of our
+            <div class="col-sm-12 col-lg-5">
+                <h1 class="mt-5 pt-2 section-title-side">Our Services</h1>
+                <p class="my-5 lead">Here are some glimpse of our
                     services. Want to find more then
                     look at below!</p>
                 <button class="btn btn-lg py-3 px-4 nz-btn-gold ">Check Service</button>
-            </div>
-            <div class="col-sm-12 col-lg-8">
+            </div>   
+            <div class="col-sm-12 col-lg-7">
                 <img src="assets/images/our_services.png" alt="Our Services" class="img-fluid">
             </div>
         </div>
@@ -156,7 +156,7 @@
             <div class="col-sm-12 col-lg-6">
                     <h1 class="section-title-side">Client FeedBack</h1>
 
-                <div class="bd-example bg-primary">
+                <div class="nz-clint-feebback-carousel bg-primary">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
