--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     services. Want to find more then
                     look at below!</p>
                 <button class="btn btn-lg py-3 px-4 nz-btn-gold ">Check Service</button>
-            </div>   
+            </div>
             <div class="col-sm-12 col-lg-7">
                 <img src="assets/images/our_services.png" alt="Our Services" class="img-fluid">
             </div>
@@ -150,23 +150,17 @@
     <section class="section-client-feed-back py-5 container">
         <!-- <h1>Client FeedBack</h1> -->
         <div class="row">
-            <div class="col-sm-12 col-lg-6">
-                <img src="assets/images/client_feedBack.png" alt="Our Services" class="img-fluid">
-            </div>
-            <div class="col-sm-12 col-lg-6">
-                    <h1 class="section-title-side">Client FeedBack</h1>
 
-                <div class="nz-clint-feebback-carousel bg-primary">
+            <div class="col-sm-12 col-lg-6">
+                <h1 class="section-title-side">Client FeedBack</h1>
+
+
+                <div class="nz-client-feedback-carousel">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                        </ol>
+
                         <div class="carousel-inner">
-                            <div class="carousel-item active" style="height: 400px; width: 100%;">
-                                <!-- <img src="assets/images/hiw_item5.png" class="d-block w-100" alt="..."> -->
-                                <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-item active">
+                                <div class="carousel-caption d-block">
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -178,25 +172,31 @@
                                     <h5>--- Jhon Doe</h5>
                                 </div>
                             </div>
-                            <div class="carousel-item" style="height: 400px; width: 100%;">
-                                <!-- <img src="assets/images/hiw_item5.png" class="d-block w-100" alt="..."> -->
+                            <div class="carousel-item">
                                 <div class="carousel-caption d-block">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                     <h5>Second slide label</h5>
                                 </div>
                             </div>
-                            <div class="carousel-item" style="height: 400px; width: 100%;">
-                                <!-- <img src="assets/images/hiw_item5.png" class="d-block w-100" alt="..."> -->
+                            <div class="carousel-item">
                                 <div class="carousel-caption d-block">
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                                     <h5>Third slide label</h5>
                                 </div>
                             </div>
                         </div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
 
                     </div>
                 </div>
 
+            </div>
+            <div class="col-sm-12 order-sm-first col-lg-6 ">
+                <img src="assets/images/client_feedBack.png" alt="Our Services" class="img-fluid">
             </div>
     </section>
     <section class="section-our-partiners py-5 container">
@@ -204,14 +204,22 @@
 
         <h1 class="section-title-centerd"><span>Our Partners</span></h1>
 
-        <div class="owl-carousel">
-            <div> Your Content 1</div>
-            <div> Your Content 2</div>
-            <div> Your Content 3</div>
-            <div> Your Content 4</div>
-            <div> Your Content 5</div>
-            <div> Your Content 6</div>
-            <div> Your Content 7</div>
+        <div class="owl-carousel section-our-partiners-carousel">
+            <div> <img src="assets/images/hiw_item1.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item2.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item3.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item4.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item5.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item1.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item2.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item3.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item4.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item5.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item1.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item2.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item3.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item4.png" alt="" class="img-fluid"></div>
+            <div> <img src="assets/images/hiw_item5.png" alt="" class="img-fluid"></div>
         </div>
     </section>
     <section class="section-contact-us py-5 container">
