--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
         <h1 class="section-title-centerd"><span>Contact Us</span></h1>
         <div class="row">
             <div class="col-sm-12 col-md-5">
-                <p> Feel Free to</p>
-                <h2>GET IN TOUCH</h2>
+                <div class="section-header">
+                    <p> Feel Free to</p>
+                    <h2>GET IN TOUCH</h2>
+                </div>
                 <form>
                     <div class="form-row">
                         <div class="col-12 col-md-6 form-group">
@@ -259,13 +261,15 @@
 
                     </div>
 
-                    <button class="btn btn-block btn-primary" type="submit">Submit form</button>
+                    <button class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal" type="submit">Send message</button>
                 </form>
             </div>
             <div class="col-sm-12 col-md-5">
-                <p> Find Us</p>
-                <h2>Our Address</h2>
-                <div class="find-us-item d-flex">
+                <div class="section-header">
+                    <p> Find Us</p>
+                    <h2>Our Address</h2>
+                </div>
+                <div class="find-us-item d-flex align-items-start">
                     <div class="find-us-icon mr-3">
                         <i class="fas fa-home"></i>
 
