footer and ninjaz face

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </section>
-    <section class="section-how-it-works py-5 container">
+    <section class="section-how-it-works py-5 container has-ninjaz-face-left">
         <!-- <h1>How It Works</h1> -->
         <h1 class="section-title-centerd"><span>How It Works</span></h1>
         <div class="row mt-5">
@@ -199,7 +199,7 @@
                 <img src="assets/images/client_feedBack.png" alt="Our Services" class="img-fluid">
             </div>
     </section>
-    <section class="section-our-partiners py-5 container">
+    <section class="section-our-partiners py-5 container has-ninjaz-face-right">
         <!-- <h1>Our Partiners</h1> -->
 
         <h1 class="section-title-centerd"><span>Our Partners</span></h1>
@@ -261,7 +261,8 @@
 
                     </div>
 
-                    <button class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal" type="submit">Send message</button>
+                    <button class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
+                        type="submit">Send message</button>
                 </form>
             </div>
             <div class="col-sm-12 col-md-5">
@@ -291,16 +292,24 @@
                     <p>+ 971 439 99330</p>
                 </div>
             </div>
+
         </div>
     </section>
+    <div class="mapouter">
+        <div class="gmap_canvas"><iframe width="2000" height="600" id="gmap_canvas"
+                src="https://maps.google.com/maps?q=55.190137,11.654599&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                href="https://usave.co.uk"></a>
+        </div>
+    </div>
     <footer class="section-footer pt-5">
         <!-- <h1>Footer</h1> -->
-        <div class="container">
+        <div class="container my-5">
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-4 footer-links">
                     <img src="assets/images/logo.png" alt="Ninjaz logo" class="img-fluid w-75">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 footer-links">
                     <ul>
                         <li> <a href="http://www.google.com" target="_blank"> Services</a> </li>
                         <li> <a href="http://www.google.com" target="_blank"> Who we are</a> </li>
