--- a/index_ar.html
+++ b/index_ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles_rtl.css">
 </head>
 
 <body>
@@ -51,14 +52,14 @@
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                <img src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/us.svg"
+                                <img src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/sa.svg"
                                     width="30" class="mr-1" alt="">
-                                Eng
+                                Arabic
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item text-uppercase text-dark" href="index_ar.html"><img
-                                        src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/sa.svg"
-                                        width="30" class="mr-1" alt=""> Arabic</a>
+                                <a class="dropdown-item text-uppercase text-dark" href="index.html"><img
+                                        src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/us.svg"
+                                        width="30" class="mr-1" alt=""> Eng</a>
                                 <a class="dropdown-item text-uppercase text-dark" href="#">
                                     <img src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/es.svg"
                                         width="30" class="mr-1" alt="">
