store flags localy

--- a/index_ar.html
+++ b/index_ar.html
@@ -52,16 +52,16 @@
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                <img src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/sa.svg"
+                                <img src="assets/images/sa.svg"
                                     width="30" class="mr-1" alt="">
                                 Arabic
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item text-uppercase text-dark" href="index.html"><img
-                                        src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/us.svg"
+                                        src="assets/images/us.svg"
                                         width="30" class="mr-1" alt=""> Eng</a>
                                 <a class="dropdown-item text-uppercase text-dark" href="#">
-                                    <img src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/es.svg"
+                                    <img src="assets/images/es.svg"
                                         width="30" class="mr-1" alt="">
                                     Spanish</a>
                             </div>
