Hero fixes & css optimization

--- a/index.html
+++ b/index.html
@@ -51,17 +51,14 @@
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                <img src="assets/images/us.svg"
-                                    width="30" class="mr-1" alt="">
+                                <img src="assets/images/us.svg" width="30" class="mr-1" alt="">
                                 Eng
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item text-uppercase text-dark" href="index_ar.html"><img
-                                        src="assets/images/sa.svg"
-                                        width="30" class="mr-1" alt=""> Arabic</a>
+                                        src="assets/images/sa.svg" width="30" class="mr-1" alt=""> Arabic</a>
                                 <a class="dropdown-item text-uppercase text-dark" href="#">
-                                    <img src="assets/images/es.svg"
-                                        width="30" class="mr-1" alt="">
+                                    <img src="assets/images/es.svg" width="30" class="mr-1" alt="">
                                     Spanish</a>
                             </div>
                         </div>
@@ -74,9 +71,9 @@
         <div class="row hero-background">
             <div class="col-12 col-lg-5 py-5 mt-5">
                 <h1 class="text-uppercase font-weight-bold nz-text-gold">Tech Enabled service Platform</h1>
-                <p class="text-uppercase font-weight-normal">FOR ALL YOUR PROFESSIONAL SERVICES</p>
+                <p class="text-uppercase font-weight-normal">FOR ALL YOUR PROFESSIONAL NEEDS</p>
                 <div class="d-flex justify-content-between pt-4">
-                    <button class="btn btn-block w-47 my-0 py-3 nz-btn-gold text-uppercase font-weight-bold">Need
+                    <button class="btn btn-block w-47 my-0 py-3 nz-btn-gold text-uppercase font-weight-bold">see all
                         Service</button>
                     <button class="btn btn-block w-47 m-0 py-3 btn-outline-gold text-uppercase font-weight-bold">offer A
                         Service</button>
@@ -246,7 +243,7 @@
         <!-- <h1>Contact Us</h1> -->
         <h1 class="section-title-centerd"><span>Contact Us</span></h1>
         <div class="row">
-            <div class="col-sm-12 col-md-5">
+            <div class="col-sm-12 col-md-6">
                 <div class="section-header">
                     <p> Feel Free to</p>
                     <h2>GET IN TOUCH</h2>
@@ -285,7 +282,7 @@
                         type="submit">Send message</button>
                 </form>
             </div>
-            <div class="col-sm-12 col-md-5 ">
+            <div class="col-sm-12 col-md-6 ">
                 <div class="section-header">
                     <p> Find Us</p>
                     <h2>Our Address</h2>
