--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark" href="#">login</a>
+                        <a class=" nav-link text-dark" href="/login.html">login</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-dark " href="#"><span class="nz-btn-gold py-0 my-2 px-2">Sign
+                        <a class="nav-link text-dark " href="/singup.html"><span class="nz-btn-gold py-0 my-2 px-2">Sign
                                 Up</span></a>
                     </li>
                     <li class="nav-item mx-3">
