--- a/blank.html
+++ b/blank.html
@@ -88,12 +88,12 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade" id="v-pills-dashboard" role="tabpanel"
                         aria-labelledby="v-pills-dashboard-tab">
-                        <h1 class="section-title-side"><span>Place order now</span></h1>
 
                     </div>
                     <div class="tab-pane fade show active" id="v-pills-services" role="tabpanel"
                         aria-labelledby="v-pills-services-tab">
-                        services</div>
+                        <h1 class="section-title-side"><span>Place order now</span></h1>
+                    </div>
                     <div class="tab-pane fade" id="v-pills-orders" role="tabpanel" aria-labelledby="v-pills-orders-tab">
                         orders</div>
                     <div class="tab-pane fade" id="v-pills-finaice" role="tabpanel"
