--- a/blank.html
+++ b/blank.html
@@ -67,19 +67,19 @@
         <div class="row">
             <div class="col-12 col-lg-2 flex-sm-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="#" class="list-group-item text-center py-4 my-3 list-group-item-action"
+                    <a href="dashboad.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
                         id="v-pills-dashboard-tab" data-toggle="pill" href="#v-pills-dashboard" role="tab"
                         aria-controls="v-pills-dashboard" aria-selected="false">Dashboard</a>
-                    <a href="#" class="list-group-item text-center py-4 my-3 list-group-item-action active"
+                    <a href="services.html" class="list-group-item text-center py-4 my-3 list-group-item-action active"
                         id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab"
                         aria-controls="v-pills-services" aria-selected="true">Services</a>
-                    <a href="#" class="list-group-item text-center py-4 my-3 list-group-item-action"
+                    <a href="orders.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
                         id="v-pills-orders-tab" data-toggle="pill" href="#v-pills-orders" role="tab"
                         aria-controls="v-pills-orders" aria-selected="false">Orders</a>
-                    <a href="#" class="list-group-item text-center py-4 my-3 list-group-item-action"
+                    <a href="finance.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
                         id="v-pills-finaice-tab" data-toggle="pill" href="#v-pills-finaice" role="tab"
                         aria-controls="v-pills-finaice" aria-selected="false">Finaice</a>
-                    <a href="#" class="list-group-item text-center py-4 my-3 list-group-item-action"
+                    <a href="account.html" class="list-group-item text-center py-4 my-3 list-group-item-action"
                         id="v-pills-account-tab" data-toggle="pill" href="#v-pills-account" role="tab"
                         aria-controls="v-pills-account" aria-selected="false">Account</a>
                 </div>
